--- a/public/about/index.html
+++ b/public/about/index.html
@@ -4,19 +4,21 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>About - Alex Spanos</title><meta name="Description" content="An assortment of opinions, reflections and semi-relevant tangents of a Data Scientist navigating the uncertain waters of startup life."><meta property="og:title" content="About" />
-<meta property="og:description" content="Hey there, I&rsquo;m Alex.
+        <title>About - Alex Spanos</title><meta name="Description" content="My Data blog"><meta property="og:url" content="http://localhost:1313/about/">
+  <meta property="og:site_name" content="Alex Spanos">
+  <meta property="og:title" content="About">
+  <meta property="og:description" content="Hey there, I’m Alex.
 I specialise in Data Science, using it to empower organizations in crafting better products and services. Lately, my focus has shifted towards building and leading teams; currently I head up the Data function of a Fintech start-up in the Open Banking space.
-Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I&rsquo;ve built significant expertise in." />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/about/" /><meta property="article:section" content="" />
+Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I’ve built significant expertise in.">
+  <meta property="og:locale" content="en">
+  <meta property="og:type" content="article">
 
-
-<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Hey there, I&rsquo;m Alex.
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="About">
+  <meta name="twitter:description" content="Hey there, I’m Alex.
 I specialise in Data Science, using it to empower organizations in crafting better products and services. Lately, my focus has shifted towards building and leading teams; currently I head up the Data function of a Fintech start-up in the Open Banking space.
-Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I&rsquo;ve built significant expertise in."/>
-      <meta name="twitter:site" content="@alexiospanos"/>
+Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I’ve built significant expertise in.">
+      <meta name="twitter:site" content="@alexiospanos">
 <meta name="application-name" content="My cool site">
 <meta name="apple-mobile-web-app-title" content="My cool site"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -44,17 +46,20 @@ Having worked in Open Banking since 2018 and shipped Data Science products to 6 
 
         <div id="mask"></div><div class="wrapper"><head>
     
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQB3XPKYKM"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-ZQB3XPKYKM', { 'anonymize_ip': false });
-}
-</script>
-
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQB3XPKYKM"></script>
+      <script>
+        var doNotTrack = false;
+        if ( false ) {
+          var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+          var doNotTrack = (dnt == "1" || dnt == "yes");
+        }
+        if (!doNotTrack) {
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-ZQB3XPKYKM');
+        }
+      </script>
     
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQB3XPKYKM"></script>
     <script>
