removed site author

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -38,7 +38,7 @@ Having worked in Open Banking since 2018 and shipped Data Science products to 6 
             "@type": "Organization",
             "name": ""},"author": {
                 "@type": "Person",
-                "name": "Alex Spanos"
+                "name": "Author"
             },"description": ""
     }
     </script></head>
