--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,18 +7,15 @@
         <title>About - Alex Spanos</title><meta name="Description" content="This is my cool site"><meta property="og:url" content="http://localhost:1313/about/">
   <meta property="og:site_name" content="Alex Spanos">
   <meta property="og:title" content="About">
-  <meta property="og:description" content="Hey there, I’m Alex.
-I specialise in Data Science, using it to empower organizations in crafting better products and services. Lately, my focus has shifted towards building and leading teams; currently I head up the Data function of a Fintech start-up in the Open Banking space.
-Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I’ve built significant expertise in.">
+  <meta property="og:description" content="About Hey there, I’m Alex — a data and AI leader who helps organizations turn data into a competitive advantage.
+I specialise in AI, machine learning, and data platform architecture, with a track record of building data capabilities that drive tangible business impact. Most recently, I was Head of Data &amp; AI at Lunos, a seed-stage fintech startup, where I led data and AI efforts as part of the founding team.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="About">
-  <meta name="twitter:description" content="Hey there, I’m Alex.
-I specialise in Data Science, using it to empower organizations in crafting better products and services. Lately, my focus has shifted towards building and leading teams; currently I head up the Data function of a Fintech start-up in the Open Banking space.
-Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I’ve built significant expertise in.">
-      <meta name="twitter:site" content="@alexiospanos">
+  <meta name="twitter:description" content="About Hey there, I’m Alex — a data and AI leader who helps organizations turn data into a competitive advantage.
+I specialise in AI, machine learning, and data platform architecture, with a track record of building data capabilities that drive tangible business impact. Most recently, I was Head of Data &amp; AI at Lunos, a seed-stage fintech startup, where I led data and AI efforts as part of the founding team.">
 <meta name="application-name" content="My cool site">
 <meta name="apple-mobile-web-app-title" content="My cool site">
 <meta name="referrer" content="no-referrer" /><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
@@ -34,7 +31,7 @@ Having worked in Open Banking since 2018 and shipped Data Science products to 6 
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "http:\/\/localhost:1313\/about\/"
-        },"genre": "page","wordcount":  147 ,
+        },"genre": "page","wordcount":  573 ,
         "url": "http:\/\/localhost:1313\/about\/","publisher": {
             "@type": "Organization",
             "name": ""},"author": {
@@ -96,13 +93,69 @@ Having worked in Open Banking since 2018 and shipped Data Science products to 6 
             </a></div>
     </div>
 </header><main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">About</h1><div class="content" id="content"><p>Hey there, I&rsquo;m Alex.</p>
-<p>I specialise in Data Science, using it to empower organizations in crafting better products and services. Lately, my focus has shifted towards building and leading teams; currently I head up the Data function of a Fintech start-up in the Open Banking space.</p>
-<p>Having worked in Open Banking since 2018 and shipped Data Science products to 6 countries, it is an area I&rsquo;ve built significant expertise in.</p>
-<p>I reside in London and love being part of the city&rsquo;s vibrant tech community! I&rsquo;m particularly passionate about discussing innovative applications of Data, ML, and AI, and how they can address our most pressing challenges and aspirations.</p>
-<h2 id="get-in-touch">Get in touch</h2>
-<p>I&rsquo;m open to consulting work and other forms of advisory in making Data a competitive advantage - email me <a href="mailto:datascience@alexiospanos.com" rel="">here</a>.</p>
-<p>You can also find me on <a href="https://www.linkedin.com/in/alexspanos/" target="_blank" rel="noopener noreffer ">LinkedIn</a> and <a href="https://twitter.com/alexiospanos" target="_blank" rel="noopener noreffer ">Twitter</a>, so feel free to connect with me there!</p>
+                <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">About</h1><div class="content" id="content"><h1 id="about">About</h1>
+<p><strong>Hey there, I’m Alex — a data and AI leader who helps organizations turn data into a competitive advantage.</strong></p>
+<p>I specialise in <strong>AI, machine learning, and data platform architecture</strong>, with a track record of building data capabilities that drive tangible business impact. Most recently, I was <strong>Head of Data &amp; AI at Lunos</strong>, a seed-stage fintech startup, where I led data and AI efforts as part of the founding team.</p>
+<p>I’m now open to <strong>consulting, advisory, and fractional leadership roles</strong> where I can help companies scale their data capabilities, architect AI solutions, or implement data governance frameworks that stick.</p>
+<h2 id="my-journey">My journey</h2>
+<p>My career is grounded in a strong foundation in <strong>statistics</strong> and <strong>applied mathematics</strong> — I hold an MSc in Statistics (awarded with distinction) and have been a <strong>Chartered Statistician (CStat)</strong> for over a decade. From there, I applied machine learning in various domains: starting with geophysics, where I developed ML approaches that reduced seismic data QC time by 70%; and later in financial services, open banking, and fintech.</p>
+<p>Since 2018, I’ve worked at the forefront of <strong>open banking and fintech AI</strong>, holding senior data leadership roles at companies like <strong>TrueLayer</strong> (the UK’s first open banking unicorn) and <strong>Tarabut</strong> (MENA’s leading open banking platform). Across these roles, I built data teams, delivered data products deployed across six regions, and generated multi-million dollar revenue from data initiatives — always with a pragmatic, impact-driven approach to AI and data science.</p>
+<h2 id="highlights">Highlights</h2>
+<ul>
+<li><strong>AI &amp; Machine Learning Leadership</strong>: Delivered production-grade ML systems in fintech — from financial behaviour insights to automated categorisation and verification services. Led MLOps efforts ensuring 99.9% availability and weekly model updates at scale.</li>
+<li><strong>Data Platforms &amp; Governance</strong>: Designed and integrated cloud-native data platforms (AWS, GCP, Snowflake, dbt). Chaired data governance committees, embedding compliance with data protection laws through policies, processes, and culture change.</li>
+<li><strong>Open Banking &amp; Fintech Data Products</strong>: Built data capabilities and products that opened new revenue streams, contributing over <strong>$4M in data product revenue</strong> and serving internal and external stakeholders across regions.</li>
+<li><strong>Team Building &amp; Technical Leadership</strong>: Scaled data functions across 4+ countries, managing 10+ FTE, and reporting directly to CEOs and CTOs.</li>
+</ul>
+<h2 id="certifications--affiliations">Certifications &amp; Affiliations</h2>
+<ul>
+<li><strong>Chartered Statistician (CStat)</strong> — Royal Statistical Society</li>
+<li><strong>Advanced Data Science Professional (AfDSP)</strong> — Alliance for Data Science Professionals</li>
+<li><strong>Certified ML Engineer (AWS)</strong></li>
+<li><strong>Professional Data Engineer (Google Cloud)</strong></li>
+</ul>
+<h2 id="speaking--publications">Speaking &amp; Publications</h2>
+<p>I’ve presented on ML/MLOps and open banking data products at industry conferences, and co-authored peer-reviewed research in applied ML and statistics.</p>
+<hr>
+<h2 id="lets-connect">Let’s connect</h2>
+<p>I’m available for:</p>
+<ul>
+<li><strong>Data &amp; AI strategy consulting</strong></li>
+<li><strong>Data platform and MLOps architecture</strong></li>
+<li><strong>Governance and compliance advisory</strong></li>
+<li><strong>Interim or fractional data leadership</strong></li>
+<li><strong>Speaking and panels</strong></li>
+</ul>
+<p>👉 <strong>Email me at <a href="mailto:contact@alexiospanos.com" rel="">contact@alexiospanos.com</a></strong><br>
+👉 <strong>Connect on <a href="https://uk.linkedin.com/in/alexspanos" target="_blank" rel="noopener noreffer ">LinkedIn</a></strong></p>
+<hr>
+<h2 id="experience-snapshot">Experience snapshot</h2>
+<ul>
+<li>
+<p><strong>Head of Data &amp; AI — Lunos (2025)</strong><br>
+Built data &amp; AI capabilities as founding team member; implemented data governance, observability, and AI-driven decision systems.</p>
+</li>
+<li>
+<p><strong>Head of Data — Tarabut (2021–2025)</strong><br>
+Scaled data team across 4 countries; delivered &gt;$4M in data product revenue; established group-wide data governance.</p>
+</li>
+<li>
+<p><strong>Lead Data Scientist / ML Engineer / PM — TrueLayer (2018–2021)</strong><br>
+Built first ML-powered services and data products at UK’s first open banking unicorn.</p>
+</li>
+<li>
+<p><strong>Senior Data Scientist — Black Swan Data (2017–2018)</strong><br>
+Delivered consumer trend prediction models for Fortune 500 clients.</p>
+</li>
+<li>
+<p><strong>Data Scientist — IBM (2015–2017)</strong><br>
+Built ML solutions for customer analytics and fraud prevention in Tier 1 banks.</p>
+</li>
+<li>
+<p><strong>Geophysicist (Applied ML role)</strong> — PGS (2012–2015)**<br>
+Developed ML approaches for seismic data processing as part of applied projects.</p>
+</li>
+</ul>
 </div></div></div>
             </main></div>
 
